# esm-parser

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  t.txt
.github/workflows/: clean.yml  rust-release.yml  rust.yml
examples/: card_cert_parsing.rs  cert_parsing.rs  esm2json.rs  esm2xml.rs  parse_ddd_file.rs  parse_ddd_file_gen1.rs
examples/helpers/: export.rs  log_helper.rs  mod.rs
examples/web/: display.js  index.html  index.js  style.css
src/: card_icc_identification.rs  consts.rs  error.rs  lib.rs  parser.rs  tachograph_data.rs  verification.rs
src/common/: bcd_string.rs  export.rs  hex.rs  mod.rs  readable.rs  writable.rs
src/helpers/: convert.rs  enum_macros.rs  mod.rs  serde.rs  strings.rs  verify.rs  wasm.rs
src/tachograph/: activity_change_info.rs  activity_source.rs  activity_type.rs  address.rs  application_identification.rs  calibration_purpose.rs  calibration_purpose_code.rs  card.rs  card_chip_identification.rs  card_control_activity_data.rs  card_control_activity_data_record.rs  card_current_use.rs  card_driver_activity.rs  card_driving_licence_information.rs  card_event_data.rs  card_fault_data.rs  card_file_id.rs  card_icc_identification.rs  card_identification.rs  card_item.rs  card_number.rs  card_place_daily_work_period.rs  card_places.rs  card_slot_number.rs  card_slot_status.rs  card_slot_status_type.rs  card_status.rs  card_structure_version.rs  card_vehicles_used.rs  certificate_content_type.rs  certificate_holder_authorisation.rs  certification_authority_kid.rs  company_activity_data.rs  company_activity_record.rs  company_activity_type.rs  company_card_application_identification.rs  company_card_holder_identification.rs  company_card_identification.rs  control_card_activity_record.rs  control_card_application_identification.rs  (+54 more)
src/tachograph_gen1/: card.rs  card_application_identification.rs  card_data.rs  card_response_data_parameter.rs  card_slot_status.rs  card_vehicle_record.rs  certificate.rs  company_card.rs  company_locks.rs  control_activity.rs  control_card.rs  control_card_application_identification.rs  download_activity.rs  downloadable_period.rs  driver_card.rs  driver_card_application_identification.rs  full_card_number.rs  mod.rs  name.rs  place_record.rs  previous_vehicle_info.rs  sensor_paired.rs  serial_number.rs  software_identification.rs  specific_conditions.rs  vehicle_registration_identification.rs  vehicles_used_record.rs  verification.rs  vu_activity.rs  vu_activity_daily_data.rs  vu_calibration.rs  vu_calibration_data.rs  vu_card_iw_data.rs  vu_company_locks_data.rs  vu_control.rs  vu_control_activity.rs  vu_data.rs  vu_detailed_speed.rs  vu_detailed_speed_data.rs  vu_download_activity_data.rs  (+17 more)
src/tachograph_gen2/: card_data.rs  card_response_parameter_data.rs  card_vehicle_record.rs  card_vehicle_units_used.rs  certificate.rs  certificate_authority_reference.rs  certificate_date.rs  certificate_holder_reference.rs  certificate_profile.rs  certificate_profile_identifier.rs  company_card.rs  company_card_application_identification_v2.rs  control_card.rs  control_card_application_identification_v2.rs  data_info.rs  driver_card.rs  driver_card_application_identification.rs  driver_card_application_identification_v2.rs  ecc_certificate.rs  extended_seal_identifier.rs  full_card_number_and_generation.rs  geo_coordinate.rs  gnss_accumulated_driving.rs  gnss_place_auth_record.rs  gnss_place_record.rs  manufacturer_specific_event_fault_data.rs  member_state_certificate_record_array.rs  member_state_certificate_records.rs  mod.rs  place_auth_record.rs  place_record.rs  seal_data_card.rs  (+52 more)
tests/: parsing_tests.rs
(+30 files in other folders)
