[package]
name = "esm-parser"
version = "0.1.0"
authors = ["Milan Bolaric"]
edition = "2024"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
log = { version = "0.4.17", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

binary-data = { git = "https://github.com/mbolaric/binary-data.git" }
chrono = "0.4.41"

[dev-dependencies]
log4rs = "1.3.0"
clap = { version = "4.2.1", features = ["derive"] }
