[package]
name = "esm-parser"
version = "0.2.0"
authors = ["Milan Bolaric"]
edition = "2024"
readme = "README.md"
license-file = "LICENSE"
repository = "https://github.com/mbolaric/esm-parser"
description = "Library for parsing ESM files (.DDD). *.DDD files are digital exports of tachograph data and contain all mandatory information required by EU regulations."
keywords = ["tachograph", "tacho", "DDD", "parsing"]
include = [
    "src/**/*",
    "examples/**/*",
    "tests/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

categories = ["parser-implementations"]

[profile.release]
codegen-units = 1
debug = "full"
lto = true
opt-level = "s"
panic = "abort"
split-debuginfo = "packed"  # generates a separate *.dwp/*.dSYM
strip = "symbols"
incremental = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = { version = "0.4.28", default-features = false, features = ["max_level_debug", "release_max_level_debug"] }

binary-data = { git = "https://github.com/mbolaric/binary-data.git", default-features = false }
chrono = "0.4.42"

serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
quick-xml = { version = "0.31.0", features = ["serialize"] }

# Cert verify
num-bigint = "0.4"
sha1 = "0.10"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6"
web-sys = { version = "0.3.81", features = ['console'] }

[dev-dependencies]
log4rs = "1.4.0"
clap = { version = "4.5.48", features = ["derive"] }
indicatif  = "0.17.11"
